form and audio chat added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abhishek-tiwari---ai-portfolio",
+  "name": "abhishek-tiwari---pwa-&-ai-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
